# TractionBuild

./: .claudeignore  .cursorignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Cleanup_Project_Script_Outcome.txt  DEPLOYMENT_README.md  DOCKER_CONCEPTS_GUIDE.md  DOCKER_REQUIREMENTS.md  Dockerfile  FILE_INVENTORY.md  LLM_FACTORY_INTEGRATION_SUMMARY.md  LLM_FACTORY_SETUP_GUIDE.md  Makefile  Makefile.patch  PATCH_README.md  PRODUCTION_READY_SUMMARY.md  PROJECT_STRUCTURE.md  RAILWAY_DEPLOYMENT.md  README.md  README_E2E.md  README_SCRIPTS.md  SECURITY.md  TRACK_A_COMPLETION_SUMMARY.md  TRACK_B_COMPLETION_SUMMARY.md  TRACK_C_COMPLETION_SUMMARY.md  TRACK_D_COMPLETION_SUMMARY.md  TRACK_E_COMPLETION_SUMMARY.md  VAULT_INTEGRATION_SUMMARY.md  ZEROTOSHIP_COMPREHENSIVE_GUIDE.md  app_v1_integrated.py  app_v1_integrated_backup.py  app_v1_mock.py  app_v1_real_integration.py  app_v1_standalone.py  chaos_testing_suite.py  (+69 more)
.claude/: settings.local.json
.github/: dependabot.yml
app/: main.py
app/routers/: ideas.py
config/: adaptive_config.yaml  agents.yaml  codegen_profiles.yaml  crew_config.yaml  production.yaml  project_workflows.yaml  tasks.yaml  workflows.yaml
config/gemini/: gemini.track-e.v2.yml
core/: cache.py  llm.py  schemas.py
data/: budget.db  memory_store.json  project_memory.backup.json  project_memory.json  summarization_dataset.json  token_usage.json.backup
data/execution_state/: final_execution_test.json  final_persistence_test.json
deployment/web/: package-lock.json  package.json  server.js
docs/: ADVISORY_BOARD_GUIDE.md  AGENT_ROSTER.md  ENHANCED_CONNECTION_SUMMARY.md  ENHANCED_WORKFLOW_SUMMARY.md  INFINITE_LOOP_FIX_SUMMARY.md  LLM_FACTORY_INTEGRATION_SUMMARY.md  LLM_FACTORY_SETUP_GUIDE.md  MAIN_PY_PRODUCTION_SUMMARY.md  NEW_DEVELOPER_ONBOARDING.md  PATCH_README.md  PRODUCTION_READY_SUMMARY.md  PROJECT_STRUCTURE.md  README_E2E.md  Salem_Pricing_Guide.markdown  TRACTIONBUILD_COMPREHENSIVE_GUIDE.md  TractionBuild Technical Specifications.txt  TractionBuild_Tech_Spec_Doc.md  VAULT_INTEGRATION_SUMMARY.md  ZeroToShip Technical Specifications.txt  Zero_To_Ship_Tech_Spec_Doc.md  zero_to_ship_overview.md
k8s/: README.md  STORAGE_TROUBLESHOOTING.md  cleanup.sh  configmap.yaml  debug-pod.yaml  deploy-with-fixes.ps1  deploy.ps1  deploy.sh  fix-storage.ps1  hpa.yaml  ingress.yaml  namespace.yaml  neo4j-deployment.yaml  prometheus-pvc-rules.yaml  secret.yaml  setup-monitoring.ps1  vault-auth-rbac.yaml  vault-backup.sh  vault-dev-deployment.yaml  vault-production-setup.ps1  vault-setup.ps1  vault-setup.sh  vault-token-reviewer.yaml  verify-deployment.ps1  zerotoship-app-sa.yaml  zerotoship-deployment-backup.yaml  zerotoship-deployment-fix.ps1  zerotoship-deployment-static-secrets.yaml  zerotoship-deployment.yaml  zerotoship-service-standalone.yaml  zerotoship_job.yaml
output/project_3f58768f/: result.json
output/project_46d538d6/: result.json
public/: index.html
repo-tools/: doctor.ps1  requirements.txt
repo-tools/HOWTORUN/: # Repo Doctor Setup Intern Onboardi.txt
repo-tools/config/: ignore_globs.txt
repo-tools/scripts/: make_bundle.py  run_js_checks.mjs  run_python_checks.py
runs/: default_docker_run.yaml  default_run.yaml  zerotoship_launch.yaml
runs/108e5284-adb6-47cb-8558-db1f9bf6d8f6/: events.jsonl
runs/175a3bcb-4b10-4d6a-9db2-b598fe6c9160/: events.jsonl
runs/48c7052c-c48b-45e1-9384-c5ba743e3f60/: events.jsonl
runs/50568b55-05cc-4bde-acb2-eba0f524f81e/: events.jsonl
runs/57489656-8f98-4114-ac8d-4a00c6f76f76/: events.jsonl
runs/5aa997c2-febe-4691-a694-d14a3bd1ed9f/: events.jsonl
runs/60355b16-89a8-4a38-8108-fa5c6be0c348/: events.jsonl
runs/79ee9be0-4af3-4042-a25b-795219b27615/: events.jsonl
runs/91776dbd-486e-4100-9ad7-c079a8fcbec4/: events.jsonl
runs/a5e77411-a21d-40d0-b963-6802699814bc/: events.jsonl
runs/b3f199b7-55ba-44fd-b0fb-0fd7781e3b66/: events.jsonl
runs/cef34f0d-a39f-4d34-977f-8b9a4ea8b047/: events.jsonl
runs/de5eec42-ce00-4da6-8ace-a4deb48e9c43/: events.jsonl
runs/ea83994e-98b9-4ac6-84f3-b2d75d99d0e3/: events.jsonl
runs/f280532e-523d-4838-ad37-357f3028cd07/: events.jsonl
runs/f8b421f0-ef6d-4019-81b1-0319ecf183e7/: events.jsonl
runs/ffeae300-557b-4fb8-9bf9-924fcd2fe0b1/: events.jsonl
runs/test_project_123/: registry.json
scripts/: check_env.py  fine_tune_summarizer.py  setup_environment.py
scripts/ci/: sbom.sh
scripts/dev/: bootstrap.sh  dependency_migration.sh
src/core/: cache.py  types.py
src/observability/: __init__.py  metrics.py  tracing.py
src/security/: redact.py  vault.py
src/services/: artifact_store.py  project_registry.py
src/smm/: __init__.py  guardrails.py  pipeline.py
src/tractionbuild/: __init__.py  check-connection.py  cli_answer.py  cli_codegen.py  cli_extract_demo.py  cli_rag.py
src/zerotoship/: __init__.py  main.py
streamlit/pages/: IdeaChat.py
tests/: conftest.py  test_adaptive_memory.py  test_adaptive_observability.py  test_advisory_board.py  test_context_bus.py  test_distributed_executor.py  test_docker.ps1  test_docker.sh  test_dynamic_workflow.py  test_e2e.py  test_e2e_min.py  test_enhanced_connection.py  test_enhanced_crew_controller.py  test_enhanced_crews.py  test_enhanced_workflows.py  test_enterprise_system.py  test_final_loop_fix.py  test_final_production_certification.py  test_integrated_core.py  test_integration_flow.py  test_learning_memory.py  test_llm_factory_integration.py  test_llm_factory_simple.py  test_marketing_campaign_fix.py  test_meta_memory.py  test_neo4j_connection.py  test_observability.py  test_output_validator.py  test_production_fixes.py  test_production_ready.py  test_project_registry.py  test_reliability_router.py  test_simple_crew.py  test_simple_loop_fix.py  test_smm_integration.py  test_state_fix.py  test_temporal_memory.py  test_token_budget.py  test_tools.py  test_vault_integration.py  (+2 more)
tests/agents/: test_guarded_agent.py
tests/core/: test_budget.py  test_settings.py
tests/crews/: test_builder_crew.py  test_validator_crew.py
tests/llm/: test_answers.py  (+5 more)
(+248 files in other folders)
