[tool.poetry]
name = "zerotoship"
version = "2.0.0"
description = "Zero to Ship AI-powered product development platform"
authors = ["Jesse Thrift <JessejThrift@gmail.com>"]

[project]
name = "zerotoship"
version = "2.0.0"
description = "Zero to Ship AI-powered product development platform"
authors = [
    { name = "Jesse Thrift", email = "JessejThrift@gmail.com" }
]
# You can also add dependencies here, but since they're in the Poetry section,
# it's not strictly necessary for uv to work.


[tool.poetry.dependencies]
python = "^3.12"
crewai = ">=0.159.0"
tenacity = ">=8.2.3"
codecarbon = ">=2.3.6"
hvac = "^1.2.0"  # For Vault
streamlit = "^1.30.0"  # For chat UI
celery = "^5.3.6"
langchain = "^0.1.20"
langchain-openai = "^0.1.0"
ollama = "^0.1.0"
tweepy = "^4.14.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"
requests = ">=2.31.0"
pydantic = ">=2.0.0"
neo4j = ">=5.0.0"
graphviz = ">=0.20.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
jinja2 = ">=3.1.0"
aiofiles = ">=23.0.0"
httpx = ">=0.25.0"
websockets = ">=11.0.0"
redis = ">=5.0.0"
prometheus-client = ">=0.17.0"
structlog = ">=23.0.0"
rich = ">=13.0.0"
click = ">=8.1.0"
typer = ">=0.9.0"
python-decouple = ">=3.8.0"
cachetools = ">=5.3.0"
sentence-transformers = ">=2.7.0"
opentelemetry-api = ">=1.25.0"
dpath = ">=2.1.0"
streamlit-chat = ">=0.1.1"
openai = ">=1.0.0"
presidio-analyzer = ">=2.2.0"
presidio-anonymizer = ">=2.2.0"
nltk = ">=3.8.0"
transformers = ">=4.35.0"
torch = ">=2.0.0"
unsloth = ">=2024.1.0"
trl = ">=0.7.0"
langchain-anthropic = ">=0.1.0"
langchain-community = "^0.0.38"
plotly = ">=5.18.0"
scipy = ">=1.11.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.5.0"
pre-commit = ">=3.3.0"
jupyter = ">=1.0.0"
ipython = ">=8.0.0"

[tool.poetry.group.tools]
optional = true

[tool.poetry.group.tools.dependencies]
crewai = {extras = ["tools"], version = ">=0.159.0"}

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
scikit-learn = ">=1.3.0"
datasets = ">=2.14.0"
accelerate = ">=0.24.0"

[tool.poetry.group.monitoring]
optional = true

[tool.poetry.group.monitoring.dependencies]
grafana-api = ">=1.0.0"
jaeger-client = ">=4.8.0"
opentelemetry-sdk = ">=1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["zerotoship"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=zerotoship",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/zerotoship"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 
